Fixed a bug on page contact-us, avoiding horizontal scrolling on mobile (#303)
* Fixed a bug on page contact-us, update style to avoid horizontal scrolling on mobile

* don't need to make the address part center neither on PC nor mobile

--- a/src/styles/pages/contactUs.scss
+++ b/src/styles/pages/contactUs.scss
@@ -220,8 +220,6 @@
     }
 
     .address-col {
-      transform: translateX(20%);
-
       .address {
         text-align: left;
         margin-bottom: 2rem;
